--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,8 @@
-baseURL = 'https://example.org/'
+baseURL = "https://tangxuliu1-create.github.io/Good-Deeds-Today/"
+
 languageCode = 'en-us'
 title = 'My New Hugo Site'
+
+[outputs]
+  home = ["HTML"]
+
